syntax = "proto3";
option go_package = "pb";
package slack;

message WebhookMsg {
    //required
    string text = 1;
    // if not entered, will be default channel of url
    string channel = 2;
    // if not entered, will be user that created webhook
    string username = 3;
    // obv not required
    string icon_url = 4;
    // obv not required
    string icon_emoji = 5;
    // if you wanna get fancy
    repeated Attachment attachments = 6;
}

// https://api.slack.com/docs/message-attachments

message Field {
    string title = 1;
    string value = 2;
    bool short = 3;
}

message Attachment {
    string fallback = 1;
    string color = 2;
    string pretext = 3;
    string author_name = 4;
    string author_link = 5;
    string author_icon = 6;
    string title = 7;
    string title_link = 8;
    string text = 9;
    repeated Field fields = 10;
    string image_url = 11;
    string thumb_url = 12;
    string footer = 13;
    string footer_icon= 14;
}